yty-tab content

--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -95,8 +95,8 @@
 
 <!--短链模版弹出begin-->
 <div class="body-form short-href-layer auto-height-table" style="display: none">
-    <div class="layui-form">
-        <div class="layui-tab yty-tab" lay-filter="docDemoTabBrief">
+    <div class="layui-form yty-tab">
+        <div class="layui-tab" lay-filter="docDemoTabBrief">
             <ul class="layui-tab-title tabpage">
                 <li class="layui-this"><a href="#">店铺常用链接</a></li>
                 <li><a href="#">宝贝链接</a></li>
