--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2448,7 +2448,7 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
 
 .phone-container{
     margin-top: 68px;
-    padding: 0 12px 0;
+    padding: 0 22px 0 10px;
     height: 252px;
     overflow-y: scroll;
     overflow-x: hidden;
