--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -238,6 +238,27 @@
 </div>
 <!--修改短信内容弹出end-->
 
+<!--设置黑名单-->
+<div class="body-form black-module-layer auto-height-table" style="display: none">
+    <div class="layui-form">
+        <div class="layui-row">
+            <form class="layui-form" method="POST" action="/sms_data.json" tableid="tableReload" id="form-set-black" lay-filter="form-sms-good-link">
+                <div class="searchbody">
+                    <ul class="nav pull-left">
+                        <li>旺旺/手机号码：<input type="text" name="uid_name" id="uid_name" placeholder="" autocomplete="off" class="layui-input"></li>
+                        <li><button class="layui-btn layui-btn-sm layui-btn-normal search-info" type="button" lay-submit="" lay-filter="component-form-element"><i class="layui-icon layui-icon-search"></i>搜索</button>
+                            <button type="reset" class="layui-btn layui-btn-normal layui-btn-sm layui-btn-sm"><i class="layui-icon layui-icon-refresh-3"></i>重置</button>
+                        </li></ul>
+                </div>
+            </form>
+        </div>
+        <div class="layui-row">
+            <table class="layui-hide" id="table_black" lay-filter="table_black" table-reload-id="tableReload"></table>
+        </div>
+    </div>
+</div>
+<!--设置黑名单-->
+
 <body>
 <div class="layui-fluid">
     <div class="layui-row layui-col-space15">
@@ -390,7 +411,7 @@
                                         <br>
                                         <p class="marginbuttom5"></p>
 
-                                        不发送黑名单客户 <a href="javascript:void(0);" class="astyle">设置黑名单</a>
+                                        不发送黑名单客户 <a href="javascript:void(0);" class="astyle set_black">设置黑名单</a>
                                     </td>
                                 </tr>
 
@@ -831,7 +852,45 @@
             }
         })
 
+        $("body").on("click",".set_black",function (){
+            var tableCommon = {
+                elem: '#table_black'
+                ,url:"/sms_data.json" //对接请求后台数据
+                // ,data:"./sms_data.json" //测试数据
+                ,id : 'tableReload'
+                ,skin:'line'
+                ,limit:10
+                ,defaultToolbar: ['filter']
+                // ,toolbar : '#toolbar'
+                ,data:{'Search':"{:__('Search')}",'Reset':"{:__('Reset')}"}
+                ,search: false
+                ,cols: [[
+                    {type:'checkbox', fixed: 'left', hide:true}
+                    ,{field:'id', title: 'id', hide:true}
+                    ,{field:'uid_name', title: '旺旺/手机号码'}
+                    ,{field:'black_type', title: '黑名单类型'}
+                    ,{field:'add_time', title: '添加时间'}
+                    ,{field:'source', title: '添加来源'}
+                    ,{fixed: 'right', title:'操作', toolbar: '#actionbar', width:250}
+                ]]
+                ,page: {
+                    layout: ['limit', 'count', 'prev', 'page', 'next', 'skip'] //自定义分页布局
+                    ,first: false //不显示首页
+                    ,last: false //不显示尾页
 
+                }
+                ,where: {filter:JSON.stringify(formSearch.api.getFormJson($(form)))}   //搜索条件
+                ,done: function(res, curr, count){
+                    if(res.status == 'success') {
+                        // layer.closeAll();
+                    }
+                }
+            };
+
+            table.render(tableCommon); //数据表格初始化
+            set_black_layer_index = we.api.open_current_page_layer($(".black-module-layer"),'设置黑名单',{zIndex:19891016
+            },['80%' , '80%']);
+        })
 
         /**
          * sms_record短信测试发送记录
