--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2371,7 +2371,7 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
 
 .dashed-td tr>td{
     border-bottom: 1px dashed #e5e5e5 !important;
-    padding: 20px 10px !important;
+    /*padding: 20px 10px !important;*/
 }
 
 .dashed-td tr{
