数据库备份

--- a/application/admin/view/Activity/member_sms.html
+++ b/application/admin/view/Activity/member_sms.html
@@ -376,14 +376,10 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="yty_tdleft"> 发送日期 :</td>
+                                    <td class="yty_tdleft"> 会员等级 :</td>
                                     <td class="yty_tdright">
-                                        <!--<div class="layui-form-item">-->
-                                        <!--<div class="layui-input-block">-->
-                                        <input type="radio" name="date_switch" lay-filter="date_switch" value="1" title="不限日期" checked="">
-                                        <input type="radio" name="date_switch" lay-filter="date_switch" value="0" title="指定日期">
-                                        <!--</div>-->
-                                        <!--</div>-->
+                                        <input type="checkbox" name="membership_level[]" lay-filter="membership_level" lay-skin="primary" value="0"  title="不限">
+                                        <input type="checkbox" name="membership_level[]"  lay-filter="membership_level" lay-skin="primary" value="1"  title="店铺会员">
                                     </td>
                                 </tr>
 
